修改了主页标题

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -72,8 +72,8 @@ import Card from '../components/Card.astro';
     <title>Astro</title>
   </head>
   <body>
-	<h1>Astro</h1>
-	<h1>我的 Astro 站点</h1>
+	<h1>三平影像</h1>
+	<h1>三平影像医疗智能分析</h1>
   </body>
 </html>
 
