--- a/SPYXanaly/src/pages/index.astro
+++ b/SPYXanaly/src/pages/index.astro
@@ -29,10 +29,11 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>欢迎使用<span class="text-gradient">三平影像医疗智能分析</span></h1>
+		<h1>欢迎使用<br/>
+			<span class="text-gradient">三平影像医疗智能分析</span>
+		</h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			宣传内容
 		</p>
 		
 	</main>
